--- a/worker/Cargo.toml
+++ b/worker/Cargo.toml
@@ -10,6 +10,7 @@ path = "src/lib.rs"
 [dependencies]
 serde = "1.0.195"
 serde_json = "1.0.111"
+image = "0.24.8"
 
 # local dependencies
 shared = { path = "../shared" }
